# SharpFlare

./: .gitignore  Makefile  README.md  SharpFlare.csproj  SharpFlare.sln  SharpFlare.userprefs  SharpFlareCore.csproj  SharpFlareKey.snk  TestPlugin.csproj  meson.build  profile.lua
Projects/Core/: SharpFlare.csproj  SharpFlare.sln  SharpFlareCore.csproj  TestSite.csproj
Projects/Framework/: .gitignore  Http1.csproj  SharpFlare.csproj  SharpFlare.sln  SharpFlareCore.csproj  TestSite.csproj
SharpFlare.Executable/: SharpFlare.Executable.csproj
SharpFlare.Executable/Source/: Program.cs
SharpFlare.Http1/: SharpFlare.Http1.csproj
SharpFlare.Http1/Source/: Http1Listener.cs  Http1RequestResponse.cs  Plugin.cs
SharpFlare/Source/: CLI.cs  DefaultErrorHandlerFiles.cs  HttpStatus.cs  Profiler.cs  RequestResponse.cs  SocketStream.cs  TaskPool.cs  UnrestrictedPlugin.cs
Source/: .gitignore  Makefile
Source/Core/: .gitignore  CLI.cs  DefaultErrorHandler.cs  DefaultErrorHandlerFiles.cs  Hook.cs  HttpListener.cs  HttpRequestResponse.cs  HttpStatus.cs  Logger.cs  Makefile  ObjectPool.cs  Plugin.cs  Plugins.cs  Profiler.cs  Program.cs  RequestResponse.cs  Router.cs  SafeStreamReader.cs  SitePlugin.cs  SocketStream.cs  TaskPool.cs  UnrestrictedPlugin.cs  Util.cs  VirtualFileSystem.cs
Source/Http1/: Http1Listener.cs  Plugin.cs
Source/Main/: Program.cs
Source/TestPlugin/: TestPlugin.cs
Source/TestSite/: TestSite.cs
TestSite/: TestSite.csproj
TestSite/Source/: TestSite.cs
